// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
.emotion-0 > button:not(:first-of-type),
.emotion-0 > a:not(:first-of-type) {
  border-top-left-radius: 0px;
  border-bottom-left-radius: 0px;
}

.emotion-0 > button:not(:last-of-type),
.emotion-0 > a:not(:last-of-type) {
  border-top-right-radius: 0px;
  border-bottom-right-radius: 0px;
}

.emotion-0 > button:focus,
.emotion-0 > a:focus {
  z-index: 1;
}

<div
  class="emotion-0"
  role="group"
/>
`;

exports[`should should accept stlye prop 1`] = `
.emotion-0 {
  color: red;
}

.emotion-0 > button:not(:first-of-type),
.emotion-0 > a:not(:first-of-type) {
  border-top-left-radius: 0px;
  border-bottom-left-radius: 0px;
}

.emotion-0 > button:not(:last-of-type),
.emotion-0 > a:not(:last-of-type) {
  border-top-right-radius: 0px;
  border-bottom-right-radius: 0px;
}

.emotion-0 > button:focus,
.emotion-0 > a:focus {
  z-index: 1;
}

<div
  class="emotion-0"
  role="group"
/>
`;
